// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`updateOne failing update should not update a field name if it is not synced correctly with label and labelSync is true 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "FIELD_MUTATION_NOT_ALLOWED",
                "message": "Name is not synced with label.",
                "userFriendlyMessage": "Updated field name is not synced with label",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "newName",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "update",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while updating field",
    "name": "GraphQLError",
  },
]
`;

exports[`updateOne failing update should throw if the field name is not available because of other field with the same name 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "fieldMetadata": [
          {
            "errors": [
              {
                "code": "NOT_AVAILABLE",
                "message": "Name "otherTestName" is not available as it is already used by another field",
                "userFriendlyMessage": "Name "otherTestName" is not available as it is already used by another field",
                "value": "otherTestName",
              },
              {
                "code": "FIELD_MUTATION_NOT_ALLOWED",
                "message": "Name is not synced with label.",
                "userFriendlyMessage": "Updated field name is not synced with label",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "name": "otherTestName",
              "objectMetadataId": Any<String>,
              "universalIdentifier": Any<String>,
            },
            "metadataName": "fieldMetadata",
            "status": "fail",
            "type": "update",
          },
        ],
      },
      "message": "Validation failed for 1 fieldMetadata",
      "summary": {
        "fieldMetadata": 1,
        "totalErrors": 1,
      },
      "userFriendlyMessage": "Metadata validation failed",
    },
    "message": "Multiple validation errors occurred while updating field",
    "name": "GraphQLError",
  },
]
`;
